app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 224 71.4% 4.1%;
    --card: 0 0% 100%;
    --card-foreground: 224 71.4% 4.1%;
    --popover: 0 0% 100%;
    --popover-foreground: 224 71.4% 4.1%;
    --primary: 236.7 65.3% 55.9%;
    --primary-foreground: 210 20% 98%;
    --secondary: 220 14.3% 95.9%;
    --secondary-foreground: 220.9 39.3% 11%;
    --muted: 220 14.3% 95.9%;
    --muted-foreground: 220 8.9% 46.1%;
    --accent: 220 14.3% 95.9%;
    --accent-foreground: 220.9 39.3% 11%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 20% 98%;
    --border: 220 13% 91%;
    --input: 220 13% 91%;
    --ring: 236.7 65.3% 55.9%;
    --radius: 0.75rem;
  }

  .dark {
    --background: 237.4 36.5% 24.7%;
    --foreground: 210 40% 98%;
    --card: 237.4 36.5% 24.7%;
    --card-foreground: 210 40% 98%;
    --popover: 237.4 36.5% 24.7%;
    --popover-foreground: 210 40% 98%;
    --primary: 236.7 65.3% 55.9%;
    --primary-foreground: 222.2 47.4% 11.2%;
    --secondary: 236.3 65% 60.8%;
    --secondary-foreground: 210 40% 98%;
    --muted: 236.3 65% 60.8%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: 236.3 65% 60.8%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --border: 236.3 65% 60.8%;
    --input: 236.3 65% 60.8%;
    --ring: 224.3 76.3% 48%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.inset-center {
  position: absolute;
  left: 50%;
  top: 15%;
  transform: translate(-50%, 0%);
}

